--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Git init",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "babel-node index.js",
+    "lint": "eslint . --ext .js,.jsx"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,22 @@
   "bugs": {
     "url": "https://github.com/dmontone/the-game/issues"
   },
-  "homepage": "https://github.com/dmontone/the-game#readme"
+  "homepage": "https://github.com/dmontone/the-game#readme",
+  "pre-commit": [
+    "lint"
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "pre-commit": "^1.2.2"
+  },
+  "dependencies": {}
 }
